# krunner-zotero

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  krunner_zotero.cpp  krunner_zotero.h  krunner_zotero.json  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
autotests/: CMakeLists.txt  test_index.cpp  test_zotero.cpp
examples/: test_index.cpp  test_zotero.cpp
src/: CMakeLists.txt  index.cpp  index.h  krunner_zotero.cpp  krunner_zotero.h  krunner_zotero.json.in  utils.h  zotero.cpp  zotero.h  zotero.proto__  zotero_item.h
